Fix alignment in article-preview

--- a/css/custom.css
+++ b/css/custom.css
@@ -162,13 +162,16 @@ div.article-preview {
 }
 
 div.article-preview a {
-    display: inline-block;
     color: var(--color-jet);
 }
 
 div.article-preview h3,
 div.article-preview p {
     margin: 0;
+}
+
+div.article-preview h3 {
+    display: inline-block;
 }
 
 .footer {
